# IA-analysis

./: .gitignore  README.md
backend/: AIhandler.py  gan.py  main.py  pyproject.toml  seq2img.py  test.py  testreq.py  vq_unet.py
backend/ai_models/: sample.py  seq2img.py  vq_unet.py
backend/pretrainedweights/: finalseq.pth  finished_encoder.pth
backend/utils/: preproccess.py  retrieve.py
